# xaml2rc

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt  checkbox.cpp  checkbox.hpp  combobox.cpp  combobox.hpp  common_text_control.cpp  common_text_control.hpp  control.cpp  control.hpp  debugoutput.cpp  debugoutput.hpp  dialogex.cpp  dialogex.hpp  edittext.cpp  edittext.hpp  flexibox.cpp  flexibox.hpp  fontmetrics.cpp  fontmetrics.hpp  grid.cpp  grid.hpp  groupbox.cpp  groupbox.hpp  listbox.cpp  listbox.hpp  ltext.cpp  ltext.hpp  main.cpp  nodecontext.cpp  nodecontext.hpp  outputformat.hpp  playgroundoutput.cpp  playgroundoutput.hpp  pushbutton.cpp  pushbutton.hpp  radiobutton.cpp  radiobutton.hpp  resource.cpp  resource.hpp  resourcescriptoutput.cpp  (+9 more)
tests/: CMakeLists.txt  alignment_expected.rc  alignment_test.xaml  compare_output.cmake  grid_expected.rc  grid_test.xaml
